--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boolando</title>
+
+  <!-- Style -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,6 +14,19 @@
   <!-- /Header -->
 
   <!-- Main -->
+  <div class="container">
+    <div class="wrap flex">
+      <div class="col">
+        <img  src="img/1.webp" alt="">
+        <img src="" alt="">
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+  </div>
   <!-- /Main -->
 
   <!-- Footer -->
