add: add image-view and hide in main

--- a/index.html
+++ b/index.html
@@ -1,35 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boolando</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Boolando</title>
 
-  <!-- Style -->
-  <link rel="stylesheet" href="css/style.css">
-</head>
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-  <!-- Header -->
-  <!-- /Header -->
+  <body>
+    <!-- Header -->
+    <!-- /Header -->
 
-  <!-- Main -->
-  <div class="container">
-    <div class="wrap flex">
-      <div class="col">
-        <img  src="img/1.webp" alt="">
-        <img src="" alt="">
+    <!-- Main -->
+    <div class="container">
+      <div class="wrap flex">
+        <div class="col">
+          <img class="img-view" src="img/1.webp" alt="" />
+          <img class="img-hide" src="img/1b.webp" alt="" />
+        </div>
+
+        <div class="col">
+          <img class="img-view" src="img/2.webp" alt="" />
+          <img class="img-hide" src="img/2b.webp" alt="" />
+        </div>
+
+        <div class="col">
+          <img class="img-view" src="img/3.webp" alt="" />
+          <img class="img-hide" src="img/3b.webp" alt="" />
+        </div>
+
+        <div class="col">
+          <img class="img-view" src="img/4.webp" alt="" />
+          <img class="img-hide" src="img/4b.webp" alt="" />
+        </div>
+
+        <div class="col">
+          <img class="img-view" src="img/5.webp" alt="" />
+          <img class="img-hide" src="img/5b.webp" alt="" />
+        </div>
+
+        <div class="col">
+          <img class="img-view" src="img/6.webp" alt="" />
+          <img class="img-hide" src="img/6b.webp" alt="" />
+        </div>
+
       </div>
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
     </div>
-  </div>
-  <!-- /Main -->
+    <!-- /Main -->
 
-  <!-- Footer -->
-  <!-- /Footer -->
-</body>
+    <!-- Footer -->
+    <!-- /Footer -->
+  </body>
 </html>
