--- a/index.html
+++ b/index.html
@@ -19,31 +19,118 @@
         <div class="col">
           <img class="img-view" src="img/1.webp" alt="" />
           <img class="img-hide" src="img/1b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="promo">
+            <span class="badge discount">-50%</span>
+            <span class="badge sost">Sostenibilità</span>
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Levi's</h4>
+            <h3>RELAXED FIT TEE UNISEX</h3>
+            <p>14,99 &euro;</p><span>29,99&euro;</span>
+          </div>
         </div>
 
         <div class="col">
           <img class="img-view" src="img/2.webp" alt="" />
           <img class="img-hide" src="img/2b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="promo">
+            <span class="badge discount">-30%</span>
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Guess</h4>
+            <h3>ROSES TEE</h3>
+            <p>20,99 &euro;</p><span>29,99&euro;</span>
+          </div>
+
         </div>
 
         <div class="col">
           <img class="img-view" src="img/3.webp" alt="" />
           <img class="img-hide" src="img/3b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="promo">
+            <span class="badge discount">-30%</span>
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Come Zucchero Filato</h4>
+            <h3>VOGLIA DI COLORI PASTELLO</h3>
+            <p>129,99 &euro;</p><span>184,99&euro;</span>
+          </div>
+
         </div>
 
         <div class="col">
           <img class="img-view" src="img/4.webp" alt="" />
           <img class="img-hide" src="img/4b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="promo">
+            <span class="badge discount">-50%</span>
+            <span class="badge sost">Sostenibilità</span>
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Levi's</h4>
+            <h3>TEE UNISEX</h3>
+            <p>14,99 &euro;</p><span>29,99&euro;</span>
+          </div>
+
         </div>
 
         <div class="col">
           <img class="img-view" src="img/5.webp" alt="" />
           <img class="img-hide" src="img/5b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Maya Deluxe</h4>
+            <h3>STRIPE BODICE</h3>
+            <p>99,99 &euro;</p>
+          </div>
+
         </div>
 
         <div class="col">
           <img class="img-view" src="img/6.webp" alt="" />
           <img class="img-hide" src="img/6b.webp" alt="" />
+
+          <div class="heart">
+            &hearts;
+          </div>
+
+          <div class="promo">
+            <span class="badge sost left-0">Sostenibilità</span>
+          </div>
+
+          <div class="info-price">
+            <h4 class="merch">Esprit</h4>
+            <h3>MAGLIONE - BLACK</h3>
+            <p>29,99 &euro;</p>
+          </div>
+
         </div>
 
       </div>
