--- a/index.html
+++ b/index.html
@@ -174,7 +174,28 @@
 
     <!-- Footer -->
     <footer>
-      
+      <div class="container">
+        <div class="row flex">
+          <div class="main-col">
+            <h3>Booleando s.r.l</h3>
+            <ul class="info flex">
+              <li><a href="">Informazioni legali</a></li>
+              <li><a href="">Informativa sulla privacy</a></li>
+              <li><a href="">Diritto di recesso</a></li>
+            </ul>
+          </div>
+          <div class="social-col">
+            <h3>Trovaci anche su</h3>
+            <ul class="social flex">
+              <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-pinterest"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-youtube"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- /Footer -->
   </body>
