--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Boolando</title>
 
     <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -27,22 +33,25 @@
 
           <!-- logo -->
           <div class="header-logo">
-            <img src="img/boolean-logo.png" alt="">
+            <img src="img/boolean-logo.png" alt="" />
           </div>
           <!-- /logo -->
 
           <!-- login like cart -->
           <ul class="login flex">
-            <li><a href=""><i class="fa-regular fa-user"></i></a></li>
-            <li><a href=""><i class="fa-regular fa-heart"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <li>
+              <a href=""><i class="fa-regular fa-user"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-regular fa-heart"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
+            </li>
           </ul>
           <!-- /login like cart -->
         </nav>
       </div>
-        
-      
-
     </header>
     <!-- /Header -->
 
@@ -54,9 +63,7 @@
             <img class="img-view" src="img/1.webp" alt="" />
             <img class="img-hide" src="img/1b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="promo">
               <span class="badge discount">-50%</span>
@@ -66,7 +73,8 @@
             <div class="info-price">
               <h4 class="merch">Levi's</h4>
               <h3>RELAXED FIT TEE UNISEX</h3>
-              <p>14,99 &euro;</p><span>29,99&euro;</span>
+              <p>14,99 &euro;</p>
+              <span>29,99&euro;</span>
             </div>
           </div>
 
@@ -74,9 +82,7 @@
             <img class="img-view" src="img/2.webp" alt="" />
             <img class="img-hide" src="img/2b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="promo">
               <span class="badge discount">-30%</span>
@@ -85,18 +91,16 @@
             <div class="info-price">
               <h4 class="merch">Guess</h4>
               <h3>ROSES TEE</h3>
-              <p>20,99 &euro;</p><span>29,99&euro;</span>
+              <p>20,99 &euro;</p>
+              <span>29,99&euro;</span>
             </div>
-
           </div>
 
           <div class="col">
             <img class="img-view" src="img/3.webp" alt="" />
             <img class="img-hide" src="img/3b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="promo">
               <span class="badge discount">-30%</span>
@@ -105,18 +109,16 @@
             <div class="info-price">
               <h4 class="merch">Come Zucchero Filato</h4>
               <h3>VOGLIA DI COLORI PASTELLO</h3>
-              <p>129,99 &euro;</p><span>184,99&euro;</span>
+              <p>129,99 &euro;</p>
+              <span>184,99&euro;</span>
             </div>
-
           </div>
 
           <div class="col">
             <img class="img-view" src="img/4.webp" alt="" />
             <img class="img-hide" src="img/4b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="promo">
               <span class="badge discount">-50%</span>
@@ -126,34 +128,29 @@
             <div class="info-price">
               <h4 class="merch">Levi's</h4>
               <h3>TEE UNISEX</h3>
-              <p>14,99 &euro;</p><span>29,99&euro;</span>
+              <p>14,99 &euro;</p>
+              <span>29,99&euro;</span>
             </div>
-
           </div>
 
           <div class="col">
             <img class="img-view" src="img/5.webp" alt="" />
             <img class="img-hide" src="img/5b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="info-price">
               <h4 class="merch">Maya Deluxe</h4>
               <h3>STRIPE BODICE</h3>
               <p>99,99 &euro;</p>
             </div>
-
           </div>
 
           <div class="col">
             <img class="img-view" src="img/6.webp" alt="" />
             <img class="img-hide" src="img/6b.webp" alt="" />
 
-            <div class="heart">
-              &hearts;
-            </div>
+            <div class="heart">&hearts;</div>
 
             <div class="promo">
               <span class="badge sost left-0">Sostenibilità</span>
@@ -164,9 +161,7 @@
               <h3>MAGLIONE - BLACK</h3>
               <p>29,99 &euro;</p>
             </div>
-
           </div>
-
         </div>
       </div>
     </main>
@@ -187,11 +182,21 @@
           <div class="social-col">
             <h3>Trovaci anche su</h3>
             <ul class="social flex">
-              <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-square-pinterest"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-square-youtube"></i></a></li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-pinterest"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-youtube"></i></a>
+              </li>
             </ul>
           </div>
         </div>
